--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -1,19 +1,56 @@
 body {
     margin: 0;
     padding: 0;
-}
-
-.slider {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    transition: opacity 500ms;
-
-    .slide.active {
-        opacity: 1;
+  }
+  
+  section {
+    h1 {
+      text-align: center;
+      margin-top: 20px;
+      font-size: 2rem;
+      color: #fff;
     }
-
-    .transition {
-        transition: transform 500ms;
+  
+    .carousel {
+      position: relative;
+      width: 100%;
+      margin: 10px auto;
+      overflow: hidden;
+      border-radius: 10px;
+    
+  
+      .carousel-track {
+        display: flex;
+        transition: transform 0.8s ease-in-out;
+        width: 100%;
+      }
+  
+      .carousel-slide {
+        transition: transform 0.5s ease-in-out;
+  
+        img {
+          width: 100%;
+          height: 50vh; 
+          object-fit: contain;
+          border-radius: 8px;
+        }
+      }
+  
+      .arrow-style {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        background-color: rgba(0, 0, 0, 0.5);
+        color: #fff;
+        border-radius: 50%;
+        padding: 10px;
+        z-index: 2;
+        transition: transform 0.3s ease;
+  
+        &:nth-child(3) {
+          right: 10px;
+        }
+      }
     }
-}
+  }
+  
